--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ crash.log
 #
 # example.tfvars
 
+.terraform.lock.hcl
+
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
 override.tf
